rabbitmq/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: rabbit.YOUR_DOMAIN
  name: rabbitmq-ui
  namespace: rabbitmq-system
spec:
  ingressClassName: nginx
  rules:
  - host: rabbit.YOUR_DOMAIN
    http:
      paths:
      - backend:
          service:
            name: rabbitmq
            port:
              name: http-stats
        path: /
        pathType: Prefix
      - backend:
          service:
            name: rabbitmq
            port:
              name: metrics
        path: /metrics
        pathType: Prefix
  tls:
  - hosts:
    - rabbit.YOUR_DOMAIN
    secretName: rabbit-tls
